Bugfix: Table is not displayed properly on small screen -> Adjust styling

--- a/src/styles/components/_tasks.scss
+++ b/src/styles/components/_tasks.scss
@@ -5,8 +5,15 @@
   max-width: $size-16;
   margin-top: $size-xl;
 
+  &__table-box {
+    @include flex;
+    width: 100%;
+    overflow-x: scroll;
+  }
+
   &__table {
     width: 100%;
+    min-width: $breakpoint-sm;
     border: 1px solid $table-border-color;
     border-radius: $border-radius-sm;
     border-collapse: separate;
@@ -18,7 +25,7 @@
   }
 
   &__cell {
-    padding: $size-lg;
+    padding: $size-sm;
     text-align: start;
     border-bottom: 1px solid $table-border-color;
 
@@ -59,5 +66,25 @@
   &__sum {
     padding: $size-lg;
     font-size: $sum-font-size;
+  }
+}
+
+@media (min-width: $breakpoint-sm) {
+
+  .tasks {
+
+    &__table-box {
+      overflow-x: auto;
+    }
+  }
+}
+
+@media (min-width: $breakpoint-md) {
+  
+  .tasks {
+    
+    &__cell {
+      padding: $size-lg;
+    }
   }
 }
